k8s/manifests/monitoring/loki.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loki
  namespace: monitoring
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: loki
  template:
    metadata:
      labels:
        app: loki
        k8s.spirl.com/spiffe-csi: enabled
    spec:
      serviceAccountName: loki
      containers:
        - name: loki
          image: grafana/loki:3.4.2
          args:
            - -config.file=/etc/loki/config.yaml
          ports:
            - name: http
              containerPort: 3100
          volumeMounts:
            - name: loki-conf
              mountPath: /etc/loki
              readOnly: true
            - name: loki-data
              mountPath: /loki
              readOnly: false
        - name: spiffe-proxy
          image: ghostunnel/ghostunnel:v1.11.3-distroless
          args:
            - server
            - --listen=0.0.0.0:8443
            - --target=127.0.0.1:3100
            - --use-workload-api
            - --allow-uri=spiffe://prod.cavallaro.local/linux-servers/*/loki-proxy
            - --allow-uri=spiffe://prod.cavallaro.local/iot/*
          ports:
            - name: mtls
              containerPort: 8443
      volumes:
        - name: loki-conf
          configMap:
            name: loki-conf
            optional: false
        - name: loki-data
          persistentVolumeClaim:
            claimName: loki-data
---
apiVersion: v1
kind: Service
metadata:
  name: loki-http
  namespace: monitoring
  annotations:
    "coredns.io/hostname": loki.o.cavnet.cloud
spec:
  type: LoadBalancer
  selector:
    app: loki
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: mtls
      port: 443
      targetPort: mtls
