k8s/manifests/monitoring/mimir.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mimir
  namespace: monitoring
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: mimir
  template:
    metadata:
      labels:
        app: mimir
        k8s.spirl.com/spiffe-csi: enabled
    spec:
      serviceAccountName: mimir
      containers:
        - name: mimir
          image: grafana/mimir:2.16.0
          args:
            - -config.file=/etc/mimir/conf.yaml
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: mimir-conf
              mountPath: /etc/mimir
              readOnly: true
            - name: mimir-data
              mountPath: /mimir
              readOnly: false
          resources:
            requests:
              cpu: 25m
              memory: 320Mi
        - name: spiffe-proxy
          image: ghostunnel/ghostunnel:v1.11.3-distroless
          args:
            - server
            - --listen=0.0.0.0:8443
            - --target=127.0.0.1:8080
            - --use-workload-api
            - --allow-uri=spiffe://prod.cavallaro.local/linux-servers/*/alloy
          ports:
            - name: mtls
              containerPort: 8443
      volumes:
        - name: mimir-conf
          configMap:
            name: mimir-conf
            optional: false
        - name: mimir-data
          persistentVolumeClaim:
            claimName: mimir-data
---
apiVersion: v1
kind: Service
metadata:
  name: mimir-http
  namespace: monitoring
  annotations:
    "coredns.io/hostname": mimir.o.cavnet.cloud
spec:
  type: LoadBalancer
  selector:
    app: mimir
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: mtls
      port: 443
      targetPort: mtls
