k8s/manifests/monitoring/alertmanager.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: alertmanager
  template:
    metadata:
      labels:
        app: alertmanager
    spec:
      containers:
        - name: alertmanager
          image: prom/alertmanager:v0.28.1
          args:
            - --config.file=/etc/alertmanager/config.yaml
          ports:
            - name: http
              containerPort: 9093
          volumeMounts:
            - name: alertmanager-conf
              mountPath: /etc/alertmanager
              readOnly: true
            - name: pushover-creds
              mountPath: /etc/pushover
              readOnly: true
      volumes:
        - name: alertmanager-conf
          configMap:
            name: alertmanager-conf
            optional: false
        - name: pushover-creds
          secret:
            secretName: pushover-creds
---
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  selector:
    app: alertmanager
  ports:
    - port: 80
      targetPort: http
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: alertmanager
  namespace: monitoring
spec:
  parentRefs:
    - namespace: default
      name: private-gateway
      sectionName: websecure
  hostnames:
    - alertmanager.o.cavnet.cloud
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: alertmanager
          port: 80
